--- a/detail.html
+++ b/detail.html
@@ -48,6 +48,7 @@ Some data structures mimicking our detail page different cases
   var dbg = true;
   var vipTextSelector = "div#download div.content div.left_dialog ul.true li.highlight";
   var run = true;
+  var fileAttrs, vipEstimate;
   var handicap = 20; // what to substract from download: DNS + Connect + Send + Wait, approx. 20ms
   // could be acquired dynamically from http://uploader.uloz.to/testfiles.txt
   var servers = [ {url:"http://storage1.cdn.int.nds/50k.bin", speed:9999},
@@ -84,7 +85,7 @@ Some data structures mimicking our detail page different cases
     }
 
     // method doing real benchmark and replace in-page data, eventually
-    this.startDownload = function(obj) {
+    this.startDownload = function() {
       if (!run) return; // do not allow it to run once the page have been modified
 
       // sort current server speed test results, first to be the fastest one
@@ -102,20 +103,20 @@ Some data structures mimicking our detail page different cases
         },
         success: function(data, status, xhr) {
           // compute the real speed (times one = depends on size of used test file: 1x = 1m, 4x=250k, 10x=100k)
-          var newVipTime = Math.floor((obj.fileAttrs.size * 1 * (new Date() - this.start - handicap))/1000/60);
-          if (dbg) console.log('Times detected. New: ', newVipTime, ' Old:', obj.vipEstimate.time);
+          var newVipTime = Math.floor((fileAttrs.size * 1 * (new Date() - this.start - handicap))/1000/60);
+          if (dbg) console.log('Times detected. New: ', newVipTime, ' Old:', vipEstimate.time);
 
           // let's go modify page the page with new values and tracking codes
-          if (newVipTime < obj.vipEstimate.time) {
+          if (newVipTime < vipEstimate.time) {
             run = false;
-            if (dbg) console.log("Condition positive, " + newVipTime + " < " + obj.vipEstimate.time + ", doing text and link replacing...");
+            if (dbg) console.log("Condition positive, " + newVipTime + " < " + vipEstimate.time + ", doing text and link replacing...");
 
             // fancy eye-catching transitions for replacing old estimate with a new (better) one
             $(vipTextSelector).fadeOut(1000, function() {
               $(this).text( function() {
-                return $(this).text().replace(obj.vipEstimate.time, newVipTime);
+                return $(this).text().replace(vipEstimate.time, newVipTime);
               });
-              $(this).fadeIn(1500);
+              $(this).fadeIn(1000).effect("shake", {direction:'right', distance:8, times:2});
             });
 
 
@@ -141,29 +142,31 @@ Some data structures mimicking our detail page different cases
       var txt = $(vipTextSelector).text().split(" "); // current VIP estimate and split to words
       var sz = $("span#fileSize").text().split(" "); // file size data element + split
       // in all four languages supported, MINutes are used as the biggest time unit; for size - following exists: GB MB kB B
-      this.fileAttrs = {size:1*sz[sz.length-2], unit:sz[sz.length-1]};
+      fileAttrs = {size:1*sz[sz.length-2], unit:sz[sz.length-1]};
       // convert GB to MB and work with them from now on
-      this.fileAttrs = (this.fileAttrs.unit == 'GB') ? {size:1000*this.fileAttrs.size, unit:'MB'} : this.fileAttrs;
-      this.vipEstimate = {time:1*txt[txt.length-2], unit:txt[txt.length-1]}
+      fileAttrs = (fileAttrs.unit == 'GB') ? {size:1000*fileAttrs.size, unit:'MB'} : fileAttrs;
+      vipEstimate = {time:1*txt[txt.length-2], unit:txt[txt.length-1]}
       // write to log what we get from the page
-      if (dbg) console.log('Page data results are: ', this.fileAttrs, this.vipEstimate);
+      if (dbg) console.log('Page data results are: ', fileAttrs, vipEstimate);
       
       // continue only when it has really some sense
-      if (this.vipEstimate.unit.substr(0, 3) !== 'min') {
+      if (vipEstimate.unit.substr(0, 3) !== 'min') {
         return; // do nothing for seconds, as the file is far too small
       }
-      if (this.fileAttrs.unit !== 'MB') {
+      if (fileAttrs.unit !== 'MB') {
         return; // do nothing for Bytes or kiloBytes, as the file is far too small
       }
       
       // detect fastest server available
-      this.selectServer(this);
+      this.selectServer();
       // and attach listeners doing some real job
-      $(".jsShowDownload").on("click", this.startDownload.bind(this, this));
+      $(".jsShowDownload").on("click", this.startDownload.bind(this));
     }
   }
 
-  new Measure().init(); // instantiate the worker
+  if ($('download')) { // instantiate the worker on detail page only
+    new Measure().init();
+  }
 }());
 
 </script>
