--- a/globalmeter.html
+++ b/globalmeter.html
@@ -118,8 +118,10 @@
   
   
   <style>
-    li.hp-nav-download a {font-size: 12px !important;}
-    li.hp-nav-gift a {font-size: 13px !important; color: darkgreen !important;}
+    li.hp-nav-download a {font-size: 14px !important;}
+    li.hp-nav-gift a {font-size: 14px !important; color: darkgreen !important; width: 482px !important;}
+    fieldset {margin-bottom: 8px; font-weight: bold;}
+    fieldset label {padding-right: 6px;}
   </style>
   
 
@@ -128,6 +130,13 @@
 
   <div id="hp-claim" class="clearfix">
     <h1><strong>Ulož.to Web Bench</strong> pro overeni rychlosti stahovani z ruznych nasich uzasnych (proxy) serveru...</h1>
+    <fieldset>
+      <legend>Druhy testu:</legend>
+      <input type="radio" id="fileSmall" name="fileSize" value="1m.bin" checked="checked"> <label for="fileSmall">VIP zrychleny</label> | 
+      <input type="radio" id="fileLarge" name="fileSize" value="10m.bin"> <label for="fileLarge">VIP</label> | 
+      <input type="radio" id="fileSmallFree" name="fileSize" value="1m.bin?limit=300k"> <label for="fileSmallFree">ZDARMA zrychleny</label> | 
+      <input type="radio" id="fileLargeFree" name="fileSize" value="10m.bin?lmit=300k"> <label for="fileLargeFree">ZDARMA</label>
+    </fieldset>
     <a id="upload-button" class="button button-xxl"><i class="fa fa-upload"></i> Spustit Mereni</a>
     <br><progress max="6" value="0" id="progressBar"></progress>
   </div>
@@ -290,15 +299,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 (function() {
   var dbg = true;
   var run = true;
-  // could be acquired dynamically from http://uploader.uloz.to/testfiles.txt
+  // could be acquired dynamically from http://uploader.uloz.to/testfiles.txt, but we need Settings mapping!!
   var servers = [ {url:"http://storage13.uloz.to/"},
                   {url:"http://freecache5.uloz.to/"},
                   {url:"http://vipcache27.uloz.to/"},
                   {url:"http://storage38.uloz.to/"}];
-  var testFile = '1m.bin?limit=1m';
-  var obj;
+  var testFile, obj;
   var container = $("#hp-nav ul");
   var progress = $("#progressBar");
+
+  // helper function for extraction of hostname from the URL
+  function displayServer(url) {
+    var parser = document.createElement('a');
+    parser.href = url;
+    return parser.hostname;
+  } 
 
   // measurement main object, for download speed benchmark and page boosting/modifications
   function MeasureAll() {
@@ -316,48 +331,53 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         },
         complete: function(response, textStatus) {
           if (response.status === 200) {
-            servers[server].speed = new Date() - this.start;
-            container.append('<li class="hp-nav-download"><a>' + servers[server].url + ' 10MB/' 
-              + servers[server].speed/100 + 's<span></span></a></li>');
-            progress.attr("value", 1 + progress.attr("value"));
-            obj.dispatch();
+            servers[server].speed = new Date() - this.start - (parseInt(testFile) === 1 ? 100 : 0); // small file correction
+            container.append('<li class="hp-nav-download"><a>' + displayServer(servers[server].url) + ', 10MB/' 
+              + ((servers[server].speed/parseInt(testFile))/100).toFixed(2) + 's<span></span></a></li>');
+          } else {
+            servers[server].speed = 9999999;
+            container.append('<li class="hp-nav-download"><a>' + displayServer(servers[server].url) + ', (time-out)<span></span></a></li>');
           }
+          progress.attr("value", 1 + progress.attr("value"));
+          obj.dispatch();
         }
       });
     }
 
+    // action running benchmark on button click
     this.action = function() {
       if (run) {
         run = false;
         container.replaceWith('<ul></ul>');
         container = $("#hp-nav ul");
         progress.attr("value", 1);
-        console.log(container);
+        if (dbg) console.log('Container initialization', container);
         for (var i in servers) {
           delete servers[i].speed;
         }
         $("#upload-button").css('opacity', .4);
+        testFile = $("input[name=fileSize]:checked").val();
         this.dispatch();
       }      
     }
 
-    // main initialization
+    // chain method assigning next test server or finishing he benchmark itself
     this.dispatch = function() {
       // prepare HTML of the page
-      if (dbg) console.log('Go', servers);
+      if (dbg) console.log('Dispatch iteration on', servers);
       for (var i in servers) {
         if (!servers[i].speed) {
           return this.benchServer(i);
         }
       }
 
-      console.log('Done');
+      if (dbg) console.log('Benchmark done, finishing');
       run = true;
       // sort current server speed test results, first to be the fastest one
       servers.sort(function(a, b) {return a.speed < b.speed ? 0 : 1;})
       setTimeout(function() {
         progress.attr("value", 6);
-        container.append('<li class="hp-nav-gift"><a>Winner is: ' + servers[0].url + '<span></span></a></li>');
+        container.append('<li class="hp-nav-gift"><a href="/nastaveni">Vitezem je: ' + displayServer(servers[0].url) + ', nastav si preferovany server Sloan!<span></span></a></li>');
         $("#upload-button").css('opacity', 1);
       }, 1000);
     }
