--- a/live.html
+++ b/live.html
@@ -152,29 +152,6 @@
 		t.addClass('onVideoButtonActive');
 	}
 
-	function videoQualityChangex(e) {
-		console.log('quality click event', parseInt(e.target.textContent));
-		var vd = $('video');
-		console.log(vd);
-		vd[0].pause();
-		vd.attr('src', vd[0].src.replace(/\.\d+\.mp4/, '.' + parseInt(e.target.textContent) + '.mp4'));
-	}
-
-	$(document).ready(function() {
-		if ($("a#player h2")) fixHtml5Vid();
-	});
-
-	function fixHtml5Vid() {
-		var plr = $("a#player");
-		video = plr.attr("href");
-		var plr2 = plr.replaceWith('<video controls id="mediaSource" src="' + video +'"/>');
-		console.log("New player", plr2);
-		var buttons = [];
-		$("span.onVideoButton").each( function(i) { buttons.push(parseInt($(this).text()));});
-		$("span#videoQualityButtons span").click(videoQualityChangex);
-	}
-
-
 </script>			</div>
 
 <div id="snippet-fileControls-ovladaniSnippet">	<div id="detailToolsMsg"></div>
@@ -815,6 +792,32 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-T8FDDK');</script>
 <!-- End Google Tag Manager -->
+
+
+<script>
+(function() {
+	// initiate HTML5 fallback for supported cases and browsers only
+	$(document).ready(function() {
+		var video = document.createElement('video');
+		// a#player>h2 exists for no-flash warning message only
+		if ($("a#player h2").length && video && video.canPlayType('video/mp4')) {
+			var plr2 = $("a#player").replaceWith('<video controls id="mediaSource" src="' + $("a#player").attr("href") + '"/>');
+			if (console) console.log("New HTML5 player element initiated: ", plr2);
+			$("span#videoQualityButtons span").click(videoQualityChng); // add another listener to existing controls
+			$('video')[0].play();
+		}
+	});
+	// method for manual change of video quality by user
+	function videoQualityChng(e) {
+		if (console) console.log('Quality click event for value: ', parseInt(e.target.textContent));
+		var vd = $('video'); // the only one on page, supposedly
+		vd[0].pause();
+		vd.attr('src', vd[0].src.replace(/\.\d+\.mp4/, '.' + parseInt(e.target.textContent) + '.mp4'));
+		vd[0].play();
+	}
+})();
+</script>
+
 </body>
 <!-- Monitoring OK -->
 <!-- http8 -->
