Changed bench servers, some UI tweaks nad LIVE has embed option now (uni-language for simplicity)

--- a/detail.html
+++ b/detail.html
@@ -54,8 +54,7 @@ sss
   // could be acquired dynamically from http://uploader.uloz.to/testfiles.txt
   var servers = [ {url:"http://storage13.uloz.to/50k.bin", speed:9999},
                   {url:"http://freecache5.uloz.to/50k.bin", speed:9999},
-                  {url:"http://vipcache27.uloz.to/50k.bin", speed:9999},
-                  {url:"http://storage38.uloz.to/50k.bin", speed:9999}];
+                  {url:"http://vipcache27.uloz.to/50k.bin", speed:9999}];
 
   // helper function, adding params object to the url
   function addParamToUrl (url, paramsObject) {
