--- a/cenik.html
+++ b/cenik.html
@@ -753,15 +753,16 @@ $(document).ready(function() {
 
 $(document).ready(function() {
 	$('td.cenik_sms_method').each(function() {
-		var text = $(this).find('span.smsText').text();
-		this.innerHTML = '<a style="text-decoration:none !important" href="sms:' + $(this).find('big').last().text().trim() + (navigator.userAgent.match(/iPhone|iPad/) ? '&' : '?') + 'body=' + text + '">' + this.innerHTML + '</a>';
+		var lnk = 'sms:' + $(this).find('big').last().text().trim() + (navigator.userAgent.match(/iPhone|iPad/) ? '&' : '?') + 'body=' + encodeURIComponent($(this).find('span.smsText').text());
+		this.innerHTML = '<a style="text-decoration:none !important" href="javascript:return false">' + this.innerHTML + '</a>';
 		$(this).find('a').on('click', function() {
 			if (_gaq) _gaq.push(['_trackEvent', 'smsPriceListClicked', 'initialized']);
 			else if (ga) ga('send', 'event', 'smsPriceListClicked', 'initialized');
-		});
+ 			window.setTimeout(function() {window.location = lnk;}, 70);
+ 			return false;
+ 		}).bind(this);
 	});
 });
-// Nefunkcni Peta: Windows Phone 8.1, IEMobile/11.0
 </script>
 
 
