--- a/cenik.html
+++ b/cenik.html
@@ -455,7 +455,30 @@
 		</tr>
 
 		 
+	<tr class="priceItem
 		
+		expensiveSms
+		">
+			<td class="cenik_data">
+				<div>
+				2 000 MB
+				</div>
+			</td>
+			<td class="cenik_flag">
+				<img class="flag" src="http://img5.uloz.to/ul3/images/flags/cz.png" alt="CZ">
+			</td>
+			<td class="cenik_cena">
+					50 CZK
+					
+			</td>
+
+
+
+
+	<td class="cenik_sms_method" colspan="2">
+				<a class="sms_icon_cz sms_icon tooltipTitle" href="/kredit?do=web-login" data-id="2266" name="modal" title="Zaplať snadno pomocí mobilu, pošli SMS a kredit Ti přijde v řádu minut."><span>Dobít kredit SMS</span></a>
+	</td>
+	</tr>
 
 
 		<tr class="priceItem
@@ -753,7 +776,9 @@ $(document).ready(function() {
 
 $(document).ready(function() {
 	$('td.cenik_sms_method').each(function() {
-		var lnk = 'sms:' + $(this).find('big').last().text().trim() + (navigator.userAgent.match(/iPhone|iPad/) ? '&' : '?') + 'body=' + encodeURIComponent($(this).find('span.smsText').text());
+		var numberToSend = $(this).find('big').last().text().trim();
+		if (!parseInt(numberToSend)) return; // skip not logged in user case
+		var lnk = 'sms:' + numberToSend + (navigator.userAgent.match(/iPhone|iPad/) ? '&' : '?') + 'body=' + encodeURIComponent($(this).find('span.smsText').text());
 		this.innerHTML = '<a style="text-decoration:none !important" href="javascript:return false">' + this.innerHTML + '</a>';
 		$(this).find('a').on('click', function() {
 			if (_gaq) _gaq.push(['_trackEvent', 'smsPriceListClicked', 'initialized']);
