Added disabled look for comment controls

--- a/comments.html
+++ b/comments.html
@@ -1014,6 +1014,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <script>
 	$(document).ready(function() {
-		if ($('p.commentsnoLogin').length) $('li.comment div.tools').css('pointer-events', 'none');
+		if ($('p.commentsnoLogin').length) $('li.comment div.tools').css('pointer-events', 'none').css('opacity', .3);
 	});
 </script>
