Fixes related to GTM on the top of the page

--- a/detail.html
+++ b/detail.html
@@ -44,7 +44,7 @@ sss
 <script src="http://img5.uloz.to/ul3/js2/ulozto.min.js?v=3.300.97-1"></script>
 
 <script>
-(function() {
+$(document).ready(function() {
   var dbg = false;
   var vipTextSelector = "div#download div.content div.left_dialog ul.true li.highlight";
   var run = true;
