Added border for mostly white videos

--- a/vivala.html
+++ b/vivala.html
@@ -456,7 +456,7 @@
 	for (var i = 0; i < 220; i++) {
     	txt += clip.name + " &nbsp; * &nbsp; ";
     }
-    $('#homepageVisual').html('<div style="float:right;width:733px;height:232px;overflow:hidden;border-radius:20px;position:relative;background-color:black;color:#222;line-height:2.3em;"><div style="top:-420px;left:-200px;position:absolute;width:920px;height:500px;font-size:22px;transform:rotate(330deg);-webkit-transform:rotate(310deg);z-index:0;">'+ txt +'</div>' +
+    $('#homepageVisual').html('<div style="float:right;width:733px;height:232px;overflow:hidden;border-radius:20px;position:relative;background-color:black;color:#222;line-height:2.3em;border:1px solid black;"><div style="top:-420px;left:-200px;position:absolute;width:920px;height:500px;font-size:22px;transform:rotate(330deg);-webkit-transform:rotate(310deg);z-index:0;">'+ txt +'</div>' +
   
     // obrazek z odkazem, doporucovana velikost je max. 732 x 232     
     //'<a href="https://www.vivala.cz/alba/38992/popcorn-drama-vcera-bude"><img src="https://img.vivala.cz/cover/173879/anna/dakujem.jpg"></a>' 
