--- a/vypis.html
+++ b/vypis.html
@@ -358,21 +358,30 @@ $(document).ready(function() {
  
   function droidTpl(size, color, xpos) { return 'background: transparent url(data:image/svg+xml,' + encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" width="[[size]]" height="[[size]]" viewBox="0 0 512 512" fill="[[color]]"><path d="M144,268.4V358c0,6.9,4.5,14,11.4,14H184v52c0,13.3,10.7,24,24,24s24-10.7,24-24v-52h49v52c0,7.5,3.4,14.2,8.8,18.6 c3.9,3.4,9.1,5.4,14.7,5.4c0.1,0,0.2,0,0.3,0c0.1,0,0.1,0,0.2,0c13.3,0,24-10.7,24-24v-52h27.6c7,0,11.4-7.1,11.4-13.9v-89.6V192 H144V268.4 M408,176c-13.3,0-24,10.7-24,24v96c0,13.3,10.7,24,24,24s24-10.7,24-24v-96C432,186.7,421.3,176,408,176 M104,176c-13.3,0-24,10.7-24,24v96c0,13.3,10.7,24,24,24s24-10.7,24-24v-96C128,186.7,117.3,176,104,176 M311.2,89.1l18.5-21.9c0.4-0.5-0.2-1.6-1.3-2.5c-1.1-0.8-2.4-1-2.7-0.4l-19.2,22.8c-13.6-5.4-30.2-8.8-50.6-8.8 c-20.5-0.1-37.2,3.2-50.8,8.5l-19-22.4c-0.4-0.5-1.6-0.4-2.7,0.4c-1.1,0.8-1.7,1.8-1.3,2.5l18.3,21.6 c-48.2,20.9-55.4,72.2-56.4,87.2h223.6C366.7,161,359.6,110.4,311.2,89.1z M206.8,138.9c-7.4,0-13.5-6-13.5-13.3 c0-7.3,6-13.3,13.5-13.3c7.4,0,13.5,6,13.5,13.3C220.3,132.9,214.3,138.9,206.8,138.9z M305.2,138.9c-7.4,0-13.5-6-13.5-13.3 c0-7.3,6-13.3,13.5-13.3c7.4,0,13.5,6,13.5,13.3C318.7,132.9,312.6,138.9,305.2,138.9z"/></svg>'.replace('[[size]]', size).replace('[[color]]', color)) + ') no-repeat scroll [[xpos]]px 0px;'.replace('[[xpos]]', xpos); }
 
-  var lng = $('html').attr('lang');
-  if ($('body#homepage').length) { // modify homepage only
-    $('li.hp-nav-filemanager a').html(trans.a[lng] + '<span></span>').attr('href', '/aplikace');
+  var lng = $('html').attr('lang'),
+      hpBox = $('li.hp-nav-filemanager a'),
+      ufmFootNew = $('li a.foot-box-filemanager'),
+      footNew = $('li a.foot-box-tools'),
+      ufmFootOld = $('footer#footer ul.fb li a.fim'),
+      footOld = $('footer#footer ul.fb li a.fin');
+  if (hpBox.length) { // modify homepage only
+    hpBox.html(trans.a[lng] + '<span></span>').attr('href', '/aplikace');
   }
-  if ($('div.foot').length) { // modify new footer
+  if (ufmFootNew.length) { // modify new footer
     $('li a.foot-box-filemanager').attr('href', '/aplikace#ufm');
-    $('li a.foot-box-tools').html(trans.b[lng] + '<span></span>').attr('href', playstore);
+  }
+  if (footNew.length) { // modify new footer tools
+    footNew.html(trans.b[lng] + '<span></span>').attr('href', playstore);
     var sheet = document.createElement('style');
-    sheet.innerHTML = 'ul.foot-box li a.foot-box-tools {' + droidTpl(36, 'green', 17.5) + '}';
-	sheet.innerHTML += 'ul.foot-box li a.foot-box-tools:hover {' + droidTpl(36, '#333', 17.5) + '}';
+    sheet.innerHTML = 'ul.foot-box li a.foot-box-tools {' + droidTpl(36, '#6AB344', 17) + '}';
+	sheet.innerHTML += 'ul.foot-box li a.foot-box-tools:hover {' + droidTpl(36, '#333', 17) + '}';
 	document.body.appendChild(sheet);
   }
-  if ($('footer#footer').length) { // modify old footer
-    $('li a.fim').attr('href', '/aplikace#ufm');
-    $('li a.fin').html(trans.b[lng] + '<span></span>').attr('href', playstore);
+  if (ufmFootOld.length) { // modify old footer
+    ufmFootOld.attr('href', '/aplikace#ufm');
+  }
+  if (footOld.length) { // modify old footer tools
+    footOld.html(trans.b[lng] + '<span></span>').attr('href', playstore);
     var sheet = document.createElement('style');
     sheet.innerHTML = 'footer#footer div.wa ul.fb li a.fin {' + droidTpl(25, '#E0FA00', -2) + '}';
 	document.body.appendChild(sheet);
